<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/roundcorner"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textColor="@color/app_color_theme"
        android:text="@string/save_dialog_heading"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_head"
        android:text="@string/save_drawing_prompt"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/app_color_theme"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_prompt"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/app_color_theme_two"
        android:hint="@string/save_drawing_prompt"
        android:textColorHint="@android:color/tertiary_text_light"/>

    <com.google.android.material.button.MaterialButton
        style="@style/DialogStyle.Button"
        android:id="@+id/btn_save"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/save"
        android:textSize="25sp"
        android:textColor="@color/app_color_theme"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_field"/>

    <com.google.android.material.button.MaterialButton
        style="@style/DialogStyle.Button"
        android:id="@+id/btn_cancel"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/cancel"
        android:textColor="@color/app_color_theme"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/et_field"/>



</androidx.constraintlayout.widget.ConstraintLayout>