<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SketchPad">

    <com.raed.rasmview.RasmView
        android:id="@+id/rasmView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/undo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/undo_icon"
            app:tint="@color/app_color_theme_two" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:textColor="@color/app_color_theme_two"
            android:text="@string/clear" />

        <ImageView
            android:id="@+id/redo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/redo_icon"
            app:tint="@color/app_color_theme_two"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/roundcorner"
        android:orientation="vertical"
        android:id="@+id/cl_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="2dp"
        android:padding="7dp">

        <ImageView
            android:id="@+id/img_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/up_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:tint="@color/app_color_theme_two" />

        <LinearLayout
            android:id="@+id/ll_row1"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/img_options">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="25sp"
                android:textColor="@color/app_color_theme_two"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:visibility="gone"
                android:id="@+id/button_reset"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_collapse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_row1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Spinner
                android:padding="10dp"
                android:id="@+id/sp_pen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:textColor="@color/app_color_theme_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"/>
            <SeekBar
                android:id="@+id/sb_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="1" />

            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:textColor="@color/app_color_theme_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flow"/>
            <SeekBar
                android:id="@+id/sb_flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="1" />

            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:textColor="@color/app_color_theme_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opacity"/>
            <SeekBar
                android:id="@+id/sb_opacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="1" />

            <androidx.appcompat.widget.AppCompatButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_brush_color"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/brush_color"
                android:textColor="@color/app_color_theme_two"
                android:layout_margin="2dp"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatButton
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_bg"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color_theme_two"
                android:text="@string/bg_color"
                android:layout_margin="2dp"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>